--- a/Mobilite_Pro_Auth/Mobilite_Pro_Auth.csproj
+++ b/Mobilite_Pro_Auth/Mobilite_Pro_Auth.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\EntityFramework.6.5.1\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.props')" />
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -47,10 +47,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.5.1\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.5.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
@@ -171,8 +171,24 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AspNetRolesController.cs" />
+    <Compile Include="Controllers\AspNetUserClaimsController.cs" />
+    <Compile Include="Controllers\AspNetUserLoginsController.cs" />
+    <Compile Include="Controllers\AspNetUsersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\T_competencesController.cs" />
+    <Compile Include="Controllers\T_entrepriseController.cs" />
+    <Compile Include="Controllers\T_languesController.cs" />
+    <Compile Include="Controllers\T_num_telController.cs" />
+    <Compile Include="Controllers\T_offre_emploiController.cs" />
+    <Compile Include="Controllers\T_profilController.cs" />
+    <Compile Include="Controllers\T_profil_competencesController.cs" />
+    <Compile Include="Controllers\T_profil_languesController.cs" />
+    <Compile Include="Controllers\T_roleController.cs" />
+    <Compile Include="Controllers\T_siteController.cs" />
+    <Compile Include="Controllers\T_statutController.cs" />
+    <Compile Include="Controllers\T_type_contratController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -336,6 +352,86 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\AspNetRoles\Create.cshtml" />
+    <Content Include="Views\AspNetRoles\Delete.cshtml" />
+    <Content Include="Views\AspNetRoles\Details.cshtml" />
+    <Content Include="Views\AspNetRoles\Edit.cshtml" />
+    <Content Include="Views\AspNetRoles\Index.cshtml" />
+    <Content Include="Views\AspNetUserClaims\Create.cshtml" />
+    <Content Include="Views\AspNetUserClaims\Delete.cshtml" />
+    <Content Include="Views\AspNetUserClaims\Details.cshtml" />
+    <Content Include="Views\AspNetUserClaims\Edit.cshtml" />
+    <Content Include="Views\AspNetUserClaims\Index.cshtml" />
+    <Content Include="Views\AspNetUserLogins\Create.cshtml" />
+    <Content Include="Views\AspNetUserLogins\Delete.cshtml" />
+    <Content Include="Views\AspNetUserLogins\Details.cshtml" />
+    <Content Include="Views\AspNetUserLogins\Edit.cshtml" />
+    <Content Include="Views\AspNetUserLogins\Index.cshtml" />
+    <Content Include="Views\AspNetUsers\Create.cshtml" />
+    <Content Include="Views\AspNetUsers\Delete.cshtml" />
+    <Content Include="Views\AspNetUsers\Details.cshtml" />
+    <Content Include="Views\AspNetUsers\Edit.cshtml" />
+    <Content Include="Views\AspNetUsers\Index.cshtml" />
+    <Content Include="Views\T_competences\Create.cshtml" />
+    <Content Include="Views\T_competences\Delete.cshtml" />
+    <Content Include="Views\T_competences\Details.cshtml" />
+    <Content Include="Views\T_competences\Edit.cshtml" />
+    <Content Include="Views\T_competences\Index.cshtml" />
+    <Content Include="Views\T_entreprise\Create.cshtml" />
+    <Content Include="Views\T_entreprise\Delete.cshtml" />
+    <Content Include="Views\T_entreprise\Details.cshtml" />
+    <Content Include="Views\T_entreprise\Edit.cshtml" />
+    <Content Include="Views\T_entreprise\Index.cshtml" />
+    <Content Include="Views\T_langues\Create.cshtml" />
+    <Content Include="Views\T_langues\Delete.cshtml" />
+    <Content Include="Views\T_langues\Details.cshtml" />
+    <Content Include="Views\T_langues\Edit.cshtml" />
+    <Content Include="Views\T_langues\Index.cshtml" />
+    <Content Include="Views\T_num_tel\Create.cshtml" />
+    <Content Include="Views\T_num_tel\Delete.cshtml" />
+    <Content Include="Views\T_num_tel\Details.cshtml" />
+    <Content Include="Views\T_num_tel\Edit.cshtml" />
+    <Content Include="Views\T_num_tel\Index.cshtml" />
+    <Content Include="Views\T_offre_emploi\Create.cshtml" />
+    <Content Include="Views\T_offre_emploi\Delete.cshtml" />
+    <Content Include="Views\T_offre_emploi\Details.cshtml" />
+    <Content Include="Views\T_offre_emploi\Edit.cshtml" />
+    <Content Include="Views\T_offre_emploi\Index.cshtml" />
+    <Content Include="Views\T_profil\Create.cshtml" />
+    <Content Include="Views\T_profil\Delete.cshtml" />
+    <Content Include="Views\T_profil\Details.cshtml" />
+    <Content Include="Views\T_profil\Edit.cshtml" />
+    <Content Include="Views\T_profil\Index.cshtml" />
+    <Content Include="Views\T_profil_competences\Create.cshtml" />
+    <Content Include="Views\T_profil_competences\Delete.cshtml" />
+    <Content Include="Views\T_profil_competences\Details.cshtml" />
+    <Content Include="Views\T_profil_competences\Edit.cshtml" />
+    <Content Include="Views\T_profil_competences\Index.cshtml" />
+    <Content Include="Views\T_profil_langues\Create.cshtml" />
+    <Content Include="Views\T_profil_langues\Delete.cshtml" />
+    <Content Include="Views\T_profil_langues\Details.cshtml" />
+    <Content Include="Views\T_profil_langues\Edit.cshtml" />
+    <Content Include="Views\T_profil_langues\Index.cshtml" />
+    <Content Include="Views\T_role\Create.cshtml" />
+    <Content Include="Views\T_role\Delete.cshtml" />
+    <Content Include="Views\T_role\Details.cshtml" />
+    <Content Include="Views\T_role\Edit.cshtml" />
+    <Content Include="Views\T_role\Index.cshtml" />
+    <Content Include="Views\T_site\Create.cshtml" />
+    <Content Include="Views\T_site\Delete.cshtml" />
+    <Content Include="Views\T_site\Details.cshtml" />
+    <Content Include="Views\T_site\Edit.cshtml" />
+    <Content Include="Views\T_site\Index.cshtml" />
+    <Content Include="Views\T_statut\Create.cshtml" />
+    <Content Include="Views\T_statut\Delete.cshtml" />
+    <Content Include="Views\T_statut\Details.cshtml" />
+    <Content Include="Views\T_statut\Edit.cshtml" />
+    <Content Include="Views\T_statut\Index.cshtml" />
+    <Content Include="Views\T_type_contrat\Create.cshtml" />
+    <Content Include="Views\T_type_contrat\Delete.cshtml" />
+    <Content Include="Views\T_type_contrat\Details.cshtml" />
+    <Content Include="Views\T_type_contrat\Edit.cshtml" />
+    <Content Include="Views\T_type_contrat\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -403,10 +499,10 @@
       <ErrorText>Ce projet fait référence à des packages NuGet qui sont manquants sur cet ordinateur. Utilisez l'option de restauration des packages NuGet pour les télécharger. Pour plus d'informations, consultez http://go.microsoft.com/fwlink/?LinkID=322105. Le fichier manquant est : {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
-    <Error Condition="!Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.5.1\build\EntityFramework.props'))" />
-    <Error Condition="!Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.5.1\build\EntityFramework.targets'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
   </Target>
-  <Import Project="..\packages\EntityFramework.6.5.1\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.5.1\build\EntityFramework.targets')" />
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
